# coherent_point_drift_cuda

./: .gitignore  CMakeLists.txt  LICENSE  README.md
mat/: check_cmd_results.m  cpd_cuda.m  example_custom_params.m  example_default_params.m  fem1.mat  fem1.txt  fem2.mat  fem2.txt  pat1.mat  pat1.txt  pat2.mat  pat2.txt  sca1.mat  sca1.txt  sca2.mat  sca2.txt
src/: CMakeLists.txt  cpd_cmd.cpp  cpd_cuda.cpp  cpd_cuda.h  cpd_cuda_def.hpp  cpd_cuda_kernels.cu  cpd_cuda_kernels.cuh  cpd_mex.cpp
